スマホ操作最適化

--- a/src/index.css
+++ b/src/index.css
@@ -6,4 +6,9 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 100px;
+}
+
+.outbox {
+    width: 550px;
 }
